; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_authz.c_ensure_node_in_array.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_repos/extr_authz.c_ensure_node_in_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i32*, i32* }

@compare_node_rule_segment = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_10__**, i32*, i32*)* @ensure_node_in_array to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ensure_node_in_array(%struct.TYPE_10__** %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_10__**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_9__, align 8
  %10 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_10__** %0, %struct.TYPE_10__*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %13 = icmp ne %struct.TYPE_10__* %12, null
  br i1 %13, label %18, label %14

14:                                               ; preds = %3
  %15 = load i32*, i32** %7, align 8
  %16 = call %struct.TYPE_10__* @apr_array_make(i32* %15, i32 4, i32 16)
  %17 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  store %struct.TYPE_10__* %16, %struct.TYPE_10__** %17, align 8
  br label %18

18:                                               ; preds = %14, %3
  %19 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %8, align 4
  %23 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %23, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* @compare_node_rule_segment, align 4
  %27 = call %struct.TYPE_9__* @svn_sort__array_lookup(%struct.TYPE_10__* %24, i32* %25, i32* %8, i32 %26)
  store %struct.TYPE_9__* %27, %struct.TYPE_9__** %10, align 8
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %29 = icmp ne %struct.TYPE_9__* %28, null
  br i1 %29, label %30, label %34

30:                                               ; preds = %18
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  store i32* %33, i32** %4, align 8
  br label %46

34:                                               ; preds = %18
  %35 = load i32*, i32** %6, align 8
  %36 = load i32*, i32** %7, align 8
  %37 = call i32* @create_node(i32* %35, i32* %36)
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  store i32* %37, i32** %38, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 1
  store i32* null, i32** %39, align 8
  %40 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %5, align 8
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %40, align 8
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @svn_sort__array_insert(%struct.TYPE_10__* %41, %struct.TYPE_9__* %9, i32 %42)
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %45 = load i32*, i32** %44, align 8
  store i32* %45, i32** %4, align 8
  br label %46

46:                                               ; preds = %34, %30
  %47 = load i32*, i32** %4, align 8
  ret i32* %47
}

declare dso_local %struct.TYPE_10__* @apr_array_make(i32*, i32, i32) #1

declare dso_local %struct.TYPE_9__* @svn_sort__array_lookup(%struct.TYPE_10__*, i32*, i32*, i32) #1

declare dso_local i32* @create_node(i32*, i32*) #1

declare dso_local i32 @svn_sort__array_insert(%struct.TYPE_10__*, %struct.TYPE_9__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
